Fix backend Application title overflow vs interaction buttons

--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_container.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_container.scss
@@ -21,7 +21,14 @@
     }
   }
   .col2{padding:$space/2;}
-  .buttonGroup{@include absolute($space/2 $space/2 '' '');}
+  .buttonGroup{
+    float: right;
+    font-size: 20px;
+    line-height: 20px;
+    :last-child:before {
+      margin: 0;
+    }
+  }
   .description{
     margin-top:$space/2;
     padding-top:$space/2;
